[tool.poetry]
name = "booklet"
version = "0.1.0"
description = ""
authors = ["Tomas Gonzalez <tomasgonz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.37.0"
watchdog = "^4.0.1"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
fpdf = "^1.7.2"
html2text = "^2024.2.26"
openai = "^1.40.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
shell = "^1.0.1"
xlsxwriter = "^3.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
